--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "less": "^4.2.0",
     "lucide-vue-next": "^0.395.0",
     "radix-vue": "^1.8.3",
     "tailwind-merge": "^2.3.0",
